--- a/Projects/FirstProject/platformio.ini
+++ b/Projects/FirstProject/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.6
+	martinsos/HCSR04@^2.0.0
+	robtillaart/PIR@^0.2.0
